Fixed bug where token wouldn't align to hex if dropped while moving mouse

--- a/aro/src/components/CombatMap.css
+++ b/aro/src/components/CombatMap.css
@@ -6,7 +6,7 @@
     border: 1px #000 solid;
 }
 
-.moveableIcon {
+.combatMap img {
     height: 6svh;
     position: absolute;
 }
